# heimdall_odin_migrate

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  __init__.py  analyze_schemas.py  check_status.py  config.py  create_users.py  db_utils.py  docker-compose.yml  generate_dump.py  generate_dump.sh  helpers.py  migrate.py  migration_session.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  setup_v2.py  tsconfig.json  tsup.config.ts  user_utils.py  utils.py  validation_utils.py
.github/workflows/: ci.yml
app/: globals.css  page.tsx
app/auth/: layout.tsx
app/auth/login/: page.tsx
components/: FormError.tsx  FormSuccess.tsx
components/auth/: BackButton.tsx  CardWrapper.tsx  LoginButton.tsx  LoginForm.tsx  header.tsx  social.tsx
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/carousel/: Carousel.js  Carousel.scss  CarouselItem.js  Data.js
frontend/src/components/footer/: Footer.js  FooterLinks.js  FooterLinks.scss
frontend/src/components/header/: Header.js  Header.module.scss
frontend/src/components/slider/: Slider.js
frontend/src/pages/: Home.js
frontend/src/pages/Home/: Home.js
frontend/src/pages/home/: Home.js  Home.scss  HomeInfo.js  ProductCategory.js  ProductCategory.scss
frontend/src/utils/: index.js
migrators/: __init__.py  parent_migrator.py  school_migrator.py  student_migrator.py  teacher_migrator.py
prisma-files/v2/: new_schema.prisma
schema-files/heimdall/: schema.prisma
schemas/: index.ts
src/: cli.ts  functions.ts  types.ts
src/modules/: promptMods.ts
src/utils/: initFiles.ts
tests/: conftest.py
tests/integration/: test_database.py
tests/unit/: test_config.py
typescript/: package.json  tsconfig.json
typescript/config/: config.ts
typescript/database/: connect.ts
user_utils/: user_utils.py
